--- a/github-user-search/package.json
+++ b/github-user-search/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dayjs": "^1.10.4",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
