--- a/github-user-search/package.json
+++ b/github-user-search/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.20.2",
     "dayjs": "^1.10.4",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
